test/conformance/chainsaw/webhooks/scale/01-policy.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: policy
spec:
  apply:
  - file: policy.yaml
    shouldFail: true
