test/conformance/chainsaw/webhooks/scale/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: scale
spec:
  concurrent: true
  namespace: default
  steps:
  - name: step-01
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy.yaml
